[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ros2unbag"
version = "1.4.2"
description = "Offline ROS 1/2 bag inspection and export tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Owen Zi-Wen ZHOU" }
]
maintainers = [
  { name = "Owen Zi-Wen ZHOU" }
]
keywords = ["ros", "ros2", "rosbag", "robotics", "export", "inspection"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "rosbags>=0.10",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "opencv-python>=4.8",
  "pillow>=10.0",
  "typer>=0.12",
  "rich>=13.7",
  "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=8.0"]

[project.urls]
"Related Lab Repository" = "https://github.com/SophiaControl/AIformula_sophia"

[project.scripts]
ros2unbag = "ros2unbag.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["ros2unbag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
